--- a/Calculator/composer.json
+++ b/Calculator/composer.json
@@ -11,5 +11,7 @@
             "email": "9026846@student.tcrmbo.nl"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "phpunit/phpunit": "^11.5"
+    }
 }
