--- a/Calculator/composer.json
+++ b/Calculator/composer.json
@@ -2,7 +2,7 @@
     "name": "07mat/calculator",
     "autoload": {
         "psr-4": {
-            "Project_Calculator\\": "src/"
+            "Project_calculator\\": "src/"
         }
     },
     "authors": [
