--- a/CRUD_fiets/composer.json
+++ b/CRUD_fiets/composer.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "autoload": {
         "psr-4": {
-            "User\\CrudFiets\\": "src/"
+            "User\\CrudFiets\\": "src/Classes/"
         }
     },
     "require-dev": {
